0029973: Modeling Algorithms - access violation within BRepAlgoAPI_Cut on empty input shape

Boolean Operations algorithm has been improved to handle the cases with empty shapes arguments correctly.
Test cases for the issue.